# integrated_project

./: Dockerfile  Jenkinsfile  README.md  agent.py  app.py  config.py  genai_routes.py  index.html  pyproject.toml  style.css
backend/: app.py  config.py  genai_routes.py  models.py  routes.py
frontend/: app.js  genaiindex.html  index.html
k8s/: deployment.yaml  secret.yaml  service.yaml
